--- a/Makefile.in
+++ b/Makefile.in
@@ -1,5 +1,5 @@
 # ============================================
-# $Id: Makefile.in,v 1.2 2007/10/08 16:37:20 eric Exp $
+# $Id: Makefile.in,v 1.3 2007/10/11 16:52:18 eric Exp $
 # ============================================
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
@@ -21,9 +21,14 @@ include $(utildir)/PubRule
 DISTFILES += $(SUBDIR) mailconnector.ods \
             RELEASE VERSION 
 
+$(pubdir)/EXTERNALS:
+	mkdir $@
 
+$(pubdir)/EXTERNALS/mailconnector.php : mailconnector.php
+	cd $(pubdir)/EXTERNALS; \
+	ln -s ../$(appname)/$< .
 
 $(pubdir)/$(appname)/mailconnector.ods : mailconnector.ods
 	cp $< $(pubdir)/$(appname)
 
-publish: $(pubdir)/$(appname)/mailconnector.ods 
+publish: $(pubdir)/$(appname)/mailconnector.ods $(pubdir)/EXTERNALS $(pubdir)/EXTERNALS/mailconnector.php
