--- a/FREEDOM-MAILCONNECTOR.spec.in
+++ b/FREEDOM-MAILCONNECTOR.spec.in
@@ -1,7 +1,7 @@
 #! /bin/rpm
 #
 #  File: 
-#  $Id: FREEDOM-MAILCONNECTOR.spec.in,v 1.1 2007/10/08 15:41:17 eric Exp $
+#  $Id: FREEDOM-MAILCONNECTOR.spec.in,v 1.2 2007/10/12 10:41:47 eric Exp $
 #
 #  This is the SPEC file for the What Users Module
 #  Anakeen What Application
@@ -67,6 +67,7 @@ BuildRoot: /tmp/anakeen-root
 Prereq: gettext
 Requires: FREEDOM-LIB >= 2.8.1
 Requires: php-imap
+Requires: php-mbstring
 
 
 %description
