--- a/Makefile.in
+++ b/Makefile.in
@@ -1,5 +1,5 @@
 # ============================================
-# $Id: Makefile.in,v 1.3 2007/10/11 16:52:18 eric Exp $
+# $Id: Makefile.in,v 1.4 2007/10/12 16:04:56 eric Exp $
 # ============================================
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
@@ -14,7 +14,7 @@ TAR = gtar
 GZIP_ENV = --best
 export targetdir PACKAGE
 
-SUBDIR= Class  Images
+SUBDIR= Class Actions Zone Images
 
 include $(utildir)/PubRule
 
