--- a/FREEDOM-MAILCONNECTOR.spec.in
+++ b/FREEDOM-MAILCONNECTOR.spec.in
@@ -1,7 +1,7 @@
 #! /bin/rpm
 #
 #  File: 
-#  $Id: FREEDOM-MAILCONNECTOR.spec.in,v 1.2 2007/10/12 10:41:47 eric Exp $
+#  $Id: FREEDOM-MAILCONNECTOR.spec.in,v 1.3 2007/10/15 16:28:23 eric Exp $
 #
 #  This is the SPEC file for the What Users Module
 #  Anakeen What Application
@@ -109,7 +109,7 @@ ln -s ../%{dirname}/Method.*.php  .
 %dir %{destdir}/%{dirname}
 %{destdir}/%{dirname}/*
 %{destdir}/FDL/*
-%{destdir}/API/*php
+%{destdir}/EXTERNALS/*php
 %{destdir}/locale/*
 
 
