rename RPM packages

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,14 +1,15 @@
 # ============================================
-# $Id: Makefile.in,v 1.6 2007/10/22 09:31:56 eric Exp $
+# $Id: Makefile.in,v 1.7 2008/03/28 10:35:25 eric Exp $
 # ============================================
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 utildir=@PUBRULE@
-appname = MAILCONNECTOR
+appname = @APPNAME@
 pubdir = @prefix@
 srcdir = @srcdir@
+applib = FDL
 
-export pubdir utildir appname
+export pubdir utildir appname applib
 
 TAR = gtar
 GZIP_ENV = --best
