--- a/Class/Makefile
+++ b/Class/Makefile
@@ -1,7 +1,20 @@
 # ============================================
-# $Id: Makefile,v 1.1 2007/10/08 15:41:17 eric Exp $
+# $Id: Makefile,v 1.2 2008/03/28 10:35:25 eric Exp $
 #
 # ============================================
 
 
 include $(utildir)/PubRule
+
+
+pages_fdl = $(patsubst %.php,$(pubdir)/$(applib)/%.php,$(wildcard Method*.php))
+pages_fdl += $(patsubst %.php,$(pubdir)/$(applib)/%.php,$(wildcard Class*.php))
+
+$(pubdir)/$(applib):
+	mkdir $@
+
+$(pubdir)/$(applib)/%.php: %.php $(pubdir)/$(applib)
+	cd $(pubdir)/$(applib); \
+	ln -sf ../$(appname)/$< .
+
+publish: $(pubdir)/$(applib) $(pages_fdl) 
