--- a/freedom-mailconnector.spec.in
+++ b/freedom-mailconnector.spec.in
@@ -1,7 +1,7 @@
 #! /bin/rpm
 #
 #  File: 
-#  $Id: FREEDOM-MAILCONNECTOR.spec.in,v 1.4 2007/10/16 14:35:30 eric Exp $
+#  $Id: freedom-mailconnector.spec.in,v 1.1 2008/03/28 10:35:25 eric Exp $
 #
 #  This is the SPEC file for the What Users Module
 #  Anakeen What Application
@@ -51,7 +51,7 @@
 %{?nhttpuser:%define httpuser %{nhttpuser}}
 %{?rpost:%define releasepostfix %{rpost}}
 
-%define dirname MAILCONNECTOR
+%define dirname @APPNAME@
 Summary: Gateway to transfert messages from IMAP server to freedom ecm
 Name: @PACKAGE@
 Version: @VERSION@
@@ -64,6 +64,8 @@ URL: http://www.anakeen.com/
 Packager: Yannick Le Briquer <yannick.lebriquer@anakeen.com>
 BuildArchitectures: noarch
 BuildRoot: /tmp/anakeen-root
+Obsoletes:	MAILCONNECTOR
+Provides:	MAILCONNECTOR = @VERSION@
 Prereq: gettext
 Requires: FREEDOM-LIB >= 2.9.0
 Requires: php-imap
@@ -86,9 +88,7 @@ autoconf
 	     --with-httpuser=%{httpuser} \
 	     --prefix=%{destdir}
 make  pubdir=$RPM_BUILD_ROOT%{destdir} 
-install -d $RPM_BUILD_ROOT/%{destdir}/FDL
-cd $RPM_BUILD_ROOT/%{destdir}/FDL
-ln -s ../%{dirname}/Method.*.php  .
+
 
 %clean
 [ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
