--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,7 @@
 #   as published by the Free Software Foundation; either version
 #   2 of the License, or (at your option) any later version.
 #
-AC_REVISION($Id: configure.in,v 1.2 2008/03/28 10:35:25 eric Exp $)
+AC_REVISION($Id: configure.in,v 1.3 2008/05/19 15:05:53 jerome Exp $)
 dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
@@ -55,4 +55,4 @@ AC_ARG_WITH(dbport,
 [  --with-dbport=port number  the database port (default 5432)], DBPORT=$withval)
 
 
-AC_OUTPUT(Makefile MAILCONNECTOR_init.php freedom-mailconnector.spec)
+AC_OUTPUT(Makefile MAILCONNECTOR_init.php freedom-mailconnector.spec debian/changelog)
