--- a/info.xml.in
+++ b/info.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<module name="freedom-mailconnector" version="@VERSION@" release="@RELEASE@" basecomponent="yes">
+<module name="freedom-mailconnector" version="@VERSION@" release="@RELEASE@">
   <description>This package create 2 documents families:mailbox and &quot;electronic messages&quot;. 
 The mailbox folder can transfert messages from IMAP folder messages to freedom folder.</description>
   <requires>
