--- a/info.xml.in
+++ b/info.xml.in
@@ -12,7 +12,7 @@ The mailbox folder can transfert messages from IMAP folder messages to freedom f
     <check type="phpfunction" function="imap_open">
       <help>You might need to install a php-imap package from your distribution in order to get IMAP support in PHP.</help>
     </check>
-    <check type="phpfunctino" function="mb_get_info">
+    <check type="phpfunction" function="mb_get_info">
       <help>You might need to install a php-mbstring package from your distribution in order to get Multibyte String support in PHP.</help>
     </check>
   </pre-install>
