--- a/info.xml.in
+++ b/info.xml.in
@@ -5,7 +5,7 @@
 The mailbox folder can transfert messages from IMAP folder messages to freedom folder.</description>
 
   <requires>
-    <module name="freedom" />
+    <module name="freedom" version="2.14.2" comp="ge" />
   </requires>
 
   <pre-install>
