--- a/info.xml.in
+++ b/info.xml.in
@@ -41,4 +41,10 @@ The mailbox folder can transfert messages from IMAP folder messages to freedom f
     <process command="programs/update_catalog" />
   </post-upgrade>
 
+  <changelog>
+    <version number="0.4.4-4" date="2009-12-28">
+      <change title="Removed PHP 5.3 deprecated functions" />
+    </version>
+  </changelog>
+
 </module>
