--- a/info.xml.in
+++ b/info.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<module name="freedom-mailconnector" version="@VERSION@" release="@RELEASE@">
+<module name="freedom-mailconnector" version="@VERSION@" release="@RELEASE@" infopath="http://www.freedom-ecm.org/modules/freedom-mailconnector/freedom-mailconnector">
 
   <description lang="en">This package create 2 documents families:mailbox and &quot;electronic messages&quot;.
 The mailbox folder can transfert messages from IMAP folder messages to freedom folder.</description>
@@ -42,6 +42,9 @@ The mailbox folder can transfert messages from IMAP folder messages to freedom f
   </post-upgrade>
 
   <changelog>
+    <version number="0.4.4-5" date="2010-03-03">
+      <change title="Added infopath link" />
+    </version>
     <version number="0.4.4-4" date="2009-12-28">
       <change title="Removed PHP 5.3 deprecated functions" />
     </version>
