--- a/Makefile.in
+++ b/Makefile.in
@@ -18,6 +18,7 @@ export targetdir PACKAGE
 SUBDIR= Class Actions Zone Images debian
 
 pages_not_xml = info.xml
+pages_not_php=fam2po.php po2js.php
 
 include $(utildir)/PubRule
 
