--- a/configure.in
+++ b/configure.in
@@ -18,7 +18,7 @@ VERSION=`cat VERSION`
 AC_SUBST(RELEASE)
 RELEASE=`cat RELEASE`
 AC_SUBST(PACKAGE)
-PACKAGE=freedom-mailconnector
+PACKAGE=dynacase-mailconnector
 AC_SUBST(APPNAME)
 APPNAME=MAILCONNECTOR
 
@@ -69,4 +69,4 @@ AC_ARG_WITH(dbport,
 [  --with-dbport=port number  the database port (default 5432)], DBPORT=$withval)
 
 
-AC_OUTPUT(Makefile MAILCONNECTOR_init.php freedom-mailconnector.spec debian/changelog info.xml)
+AC_OUTPUT(Makefile MAILCONNECTOR_init.php info.xml)
