--- a/info.xml.in
+++ b/info.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<module name="dynacase-mailconnector" version="@VERSION@" release="@RELEASE@" infopath="http://www.dynacase.org/modules/dynacase-mailconnector/dynacase-mailconnector">
+<module name="dynacase-mailconnector" version="@VERSION@" release="@RELEASE@" license="@LICENSE@" infopath="http://www.dynacase.org/modules/dynacase-mailconnector/dynacase-mailconnector">
 
   <description lang="en">This package create 2 documents families:mailbox and &quot;electronic messages&quot;.
 The mailbox folder can transfert messages from IMAP folder messages to dynacase folder.</description>
