--- a/MAILCONNECTOR_init.php.in
+++ b/MAILCONNECTOR_init.php.in
@@ -1,25 +1,20 @@
 <?php
-
-/**
+/*
  * @author Anakeen
  * @license http://www.fsf.org/licensing/licenses/agpl-3.0.html GNU Affero General Public License
- */
-
-// ---------------------------------------------------------------
-// $Id: MAILCONNECTOR_init.php.in,v 1.2 2007/10/17 15:44:17 eric Exp $
-// $Source: /home/cvsroot/anakeen/freedom/mailconnector/MAILCONNECTOR_init.php.in,v $
-// ---------------------------------------------------------------
+ * @package MAILCONNECTOR
+*/
 
 global $app_const;
 
-$app_const= array(
-		  "INIT" => "yes",
-		  "VERSION" => "@VERSION@-@RELEASE@",
-		  "MB_TIMEOUT"    =>array("val"=>"5",
-					  "descr"=>N_("timeout in second for waiting connection"),
-					  "global"=>"Y",
-					  "user"=>"N")
-		  
-		  );
-
+$app_const = array(
+    "INIT" => "yes",
+    "VERSION" => "@VERSION@-@RELEASE@",
+    "MB_TIMEOUT" => array(
+        "val" => "5",
+        "descr" => N_("timeout in second for waiting connection") ,
+        "global" => "Y",
+        "user" => "N"
+    )
+);
 ?>
