--- a/info.xml.in
+++ b/info.xml.in
@@ -9,7 +9,7 @@ The mailbox folder can transfert messages from IMAP folder messages to dynacase 
   </replaces>
 
   <requires>
-    <module name="dynacase-platform" comp="lt" version="3.2.0" />
+    <module name="dynacase-platform" comp="ge" version="3.2.0" />
   </requires>
 
   <pre-install>
@@ -31,16 +31,17 @@ The mailbox folder can transfert messages from IMAP folder messages to dynacase 
   </pre-upgrade>
 
   <post-install>
-    <process command="programs/app_post MAILCONNECTOR I" />
     <process command="programs/record_application MAILCONNECTOR" />
-    <process command="programs/app_post MAILCONNECTOR U" />
+    <process command="./wsh.php --api=importDocuments --file=./MAILCONNECTOR/mailconnector.ods" />
+    <process command="./wsh.php --api=importDocuments --file=./MAILCONNECTOR/mc_services.ods" />
     <process command="programs/update_catalog" />
   </post-install>
  
   <post-upgrade>
     <process command="programs/pre_migration MAILCONNECTOR" />
-    <process command="programs/app_post MAILCONNECTOR U" />
     <process command="programs/record_application MAILCONNECTOR" />
+    <process command="./wsh.php --api=importDocuments --file=./MAILCONNECTOR/mailconnector.ods" />
+    <process command="./wsh.php --api=importDocuments --file=./MAILCONNECTOR/mc_services.ods" />
     <process command="programs/post_migration MAILCONNECTOR" />
     <process command="programs/update_catalog" />
   </post-upgrade>
