Requires dynacase-webdesk-services (closes #3019)

--- a/info.xml.in
+++ b/info.xml.in
@@ -10,6 +10,7 @@ The mailbox folder can transfert messages from IMAP folder messages to dynacase 
 
   <requires>
     <module name="dynacase-platform" comp="ge" version="3.2.0" />
+    <module name="dynacase-webdesk-services" />
   </requires>
 
   <pre-install>
