--- a/configure.in
+++ b/configure.in
@@ -49,4 +49,4 @@ AC_ARG_ENABLE(debug,
 
 
 
-AC_OUTPUT(Makefile MAILCONNECTOR_init.php info.xml Admin/MAILCONNECTORADMIN_init.php)
+AC_OUTPUT(Makefile MAILCONNECTOR_init.php info.xml Services/info.xml Admin/MAILCONNECTORADMIN_init.php)
