--- a/Services/info.xml.in
+++ b/Services/info.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<module name="dynacase-mailconnector-services" version="@VERSION@" release="@RELEASE@" license="@LICENSE@" infopath="http://www.dynacase.org/modules/dynacase-mailconnector/dynacase-mailconnector">
+<module name="dynacase-mailconnector-services" version="@VERSION@" release="@RELEASE@" license="http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License v3.0">
 
   <description lang="en">This package add services which can by used with dynacase-webdesk-services module.</description>
 
